--- a/Tetris/Tetris.vcxproj.filters
+++ b/Tetris/Tetris.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="AchieveDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="RankDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tetris.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="AchieveDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="RankDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
