--- a/Tetris/Tetris.vcxproj.filters
+++ b/Tetris/Tetris.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="ChooseDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="GameDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tetris.cpp">
@@ -60,6 +63,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ChooseDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="GameDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
