--- a/Tetris/Tetris.vcxproj
+++ b/Tetris/Tetris.vcxproj
@@ -190,6 +190,7 @@
     <ClInclude Include="ChooseDlg.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameDlg.h" />
+    <ClInclude Include="Rank.h" />
     <ClInclude Include="RankDlg.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -203,6 +204,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameDlg.cpp" />
     <ClCompile Include="Rank.cpp" />
+    <ClCompile Include="Rank_b.cpp" />
     <ClCompile Include="RankDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
