--- a/Tetris/Tetris.vcxproj.filters
+++ b/Tetris/Tetris.vcxproj.filters
@@ -16,6 +16,15 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+    <Text Include="dataPtn0.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="dataPtn1.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="dataPtn2.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tetris.h">
@@ -77,10 +86,10 @@
     <ClCompile Include="Game.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Rank_b.cpp">
+    <ClCompile Include="Rank.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="Rank.cpp">
+    <ClCompile Include="achivement.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
