--- a/Tetris/Tetris.vcxproj.filters
+++ b/Tetris/Tetris.vcxproj.filters
@@ -16,6 +16,15 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+    <Text Include="dataPtn0.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="dataPtn1.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="dataPtn2.txt">
+      <Filter>资源文件</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tetris.h">
@@ -75,9 +84,6 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="Rank_b.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Rank.cpp">
